testdata/bad/timestamp_22.ion
2004-12-11T12-08:00
